[package]
name = "amqp-value-json"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
repository = "https://github.com/amqp-value-json"
license = "MIT"
description = "Crate to convert between AMQP and JSON values"

[dependencies]
amq-protocol-types = "7.0.1"
anyhow = "1.0.57"
serde_json = "1.0.79"
thiserror = "1.0.30"
